Update editor to Java 25